--- a/public/styles/medicines.css
+++ b/public/styles/medicines.css
@@ -1,15 +1,16 @@
 /* Set max width of page */
 body {
-  background-color: #f5f5f5;
-  color: #333;
   font-family: Arial, sans-serif;
+  font-size: 16px;
+  padding: 0;
+  color: #000;
+  background-color: sandybrown;
 }
 
 /* Style the table */
 table {
   width: 100%;
   border-collapse: collapse;
-  background-color: #fff;
   margin-bottom: 20px;
   border-radius: 5px;
 }
@@ -24,12 +25,8 @@ td {
 }
 
 th {
-  background-color: #f2f2f2;
+  background-color: #ddd;
   color: #333;
-}
-
-tr:nth-child(even) {
-  background-color: #f2f2f2;
 }
 
 /* Style the input fields */
@@ -54,7 +51,7 @@ button {
 }
 
 button:hover {
-  background-color: #3e8e41;
+  box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
 }
 
 /* Define headings */
@@ -106,17 +103,11 @@ span {
   margin-bottom: 10px;
   line-height: 1.5;
 }
-body {
-  background-color: #f5f5f5;
-  font-family: Arial, sans-serif;
-  font-size: 16px;
-  padding: 0;
-}
-
 .container {
   margin: 0 auto;
   max-width: 1100px;
   padding: 20px;
+  background-color: #3898db;
 }
 
 h1 {
@@ -124,12 +115,6 @@ h1 {
   font-weight: bold;
   margin-bottom: 20px;
   text-align: center;
-}
-
-table {
-  border-collapse: collapse;
-  margin: 0 auto;
-  width: 100%;
 }
 
 th,
@@ -148,7 +133,7 @@ th {
 }
 
 .actions a {
-  background-color: #007bff;
+  background-color: brown;
   border: none;
   border-radius: 4px;
   color: #fff;
@@ -156,11 +141,11 @@ th {
   font-size: 14px;
   padding: 8px 16px;
   text-decoration: none;
-  transition: background-color 0.3s ease-in-out;
+  transition: 0.3s ease-in-out;
 }
 
 .edit {
-  background-color: #ffc107;
+  background-color: green;
   margin: 0 auto;
 }
 
@@ -168,9 +153,12 @@ th {
   background-color: #dc3545;
   margin: 0 auto;
 }
+.delete:hover {
+  box-shadow: 0px 15px 20px rgba(231, 133, 135, 0.4);
+}
 
 .add {
-  background-color: #007bff;
+  background-color: tomato;
   border: none;
   border-radius: 4px;
   color: #fff;
@@ -183,7 +171,7 @@ th {
 }
 
 .add:hover {
-  background-color: #0056b3;
+  box-shadow: 0px 22px 24px rgba(231, 133, 135, 0.4);
   cursor: pointer;
 }
 .success-message {
