--- a/views/medicines.pug
+++ b/views/medicines.pug
@@ -1,7 +1,7 @@
 html
   head
-    title User List
-    link(rel="stylesheet", href="/styles/users.css")
+    title Medicine List
+    link(rel="stylesheet", href="/styles/medicines.css")
   body
     .container
       h1 Medicine List
@@ -15,7 +15,7 @@ html
             th Name
             th DistributorEmail
             th DistributorAddress
-            th Type
+            th Variety
             th Edit 
             th Delete 
         tbody
@@ -24,19 +24,20 @@ html
               td= user.name
               td= user.email
               td= user.address
-              td= user.type
+              td= user.variety
               td 
-                form.edit-form(action=`/users/edit-form/${user.id}`, method="post")
+                form.edit-form(action=`/medicines/edit-form/${user.id}`, method="post")
                   button.edit(type='submit') Edit 
               td.delete-cell
-                button.delete(type='submit',onclick=`deleteStudent('${user.id}')`) Delete
+                button.delete(type='submit',onclick=`deleteMedicine('${user.id}')`) Delete
                 
-      a.add(href='/users/add-form') Add new medicine
+      a.add(href='/medicines/add-form') Add new medicine
 
 script.
-  function deleteStudent(userId) {
+  function deleteMedicine(userId) {
     if (confirm('Are you sure you want to delete this medicine?')) {
-      fetch(`/users/${userId}`, {
+      console.log(userId);
+      fetch(`/medicines/${userId}`, {
         method: 'DELETE',
       })
       .then(response => {
