fix:add the statement from requirements

--- a/views/medicines.pug
+++ b/views/medicines.pug
@@ -32,7 +32,7 @@ html
                 button.delete(type='submit',onclick=`deleteMedicine('${user.id}')`) Delete
                 
       a.add(href='/medicines/add-form') Add new medicine
-
+      h3 This web application was created to fulfill Web Technology modules requirements and does not represent an actual company or service  
 script.
   function deleteMedicine(userId) {
     if (confirm('Are you sure you want to delete this medicine?')) {
